# OffensiveNotion

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  OffensiveNotion-SigmaRule.yaml  README.md  main.py  nim.cfg  offnote.py  pyproject.toml  requirements.txt  rules.yara
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
agent/: Cargo.toml  build.rs  offensive_notion.rc
agent/src/: command.rs  config.rs  env_check.rs  env_key.rs  logger.rs  main.rs  notion.rs
agent/src/channels/: github.rs  mod.rs  notion.rs  tumblr.rs
agent/src/cmd/: azupload.rs  cd.rs  config.rs  createthread.rs  download.rs  elevate.rs  execute_assembly.rs  exfil.rs  getprivs.rs  getsystem.rs  inject.rs  is_elevated.rs  ls.rs  mod.rs  persist.rs  portscan.rs  ps.rs  pwd.rs  rev2self.rs  runas.rs  s3upload.rs  save.rs  selfdestruct.rs  shell.rs  shutdown.rs  sleep.rs  sysinfo.rs  unknown.rs  upload.rs  whoami.rs
agent/src/command/: isElevated.rs  portscan.rs  portscanner.rs
agent/src/config/: mod.rs  notion.rs
archive/: offnote.py
defenderkit/: offnote.py  offnote_interceptor.py
nimsrc/: OffensiveNotion.nimble  nim.cfg
nimsrc/src/: OffensiveNotion.nim
src/: OffensiveNotion.nim  agent  agent.nim  config.rs  main.rs  notion.rs
utils/: __init__.py  c2_linter.py  colors.py  file_utils.py  inputs.py  web_delivery.py
