[package]
name = "offensive_notion"
version = "0.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features=["derive"] }
serde_json = "1.0"
winapi = "0.3.8"
libc = "0.2.66"
sysinfo = "0.23.0"
whoami = "1.2.1"
rand = "0.8.0"
is-root = "0.1.2"
base64 = "0.13.0"
cidr-utils = "0.5.5"

[build-dependencies]
embed-resource = "1.6"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = { version = "0.3", features = ["winnt","winuser", "handleapi", "processthreadsapi", "securitybaseapi"] }
winreg = "0.10"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true

