[package]
name = "offensive_notion"
version = "1.1.0"
edition = "2021"
build = "build.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.136", features=["derive"] }
serde_json = "1.0"
libc = "0.2.66"
sysinfo = "0.23.0"
whoami = "1.2.1"
rand = "0.8.0"
is-root = "0.1.2"
base64 = "0.13.0"
cidr-utils = "0.5.5"
litcrypt = "0.3"

[build-dependencies]
embed-resource = "1.6"

[target.'cfg(windows)'.dependencies]
kernel32-sys = "0.2.2"
winapi = { version = "0.3.8", features = ["winnt","winuser", "handleapi", "processthreadsapi", "securitybaseapi"] }
winreg = "0.10"
houdini = "1.0.2"
windows = { version = "0.34.0", features = [
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming"
  ] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = true

